force-app/main/default/objects/ChangePlan__c/ChangePlan__c.object-meta.xml
<CustomObject>
    <description>A plan for upgrading API versions of selected components</description>
    <label>Change Plan</label>
    <nameField>
        <displayFormat>PLAN-{0000}</displayFormat>
        <label>Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>