force-app/main/default/objects/ChangePlan__c/fields/CreatedFromScan__c.field-meta.xml
<CustomField>
    <fullName>CreatedFromScan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Scan that this plan was created from</description>
    <label>Created From Scan</label>
    <referenceTo>Scan__c</referenceTo>
    <relationshipLabel>Change Plans</relationshipLabel>
    <relationshipName>ChangePlans</relationshipName>
    <type>Lookup</type>
</CustomField>