force-app/main/default/objects/ChangePlan__c/fields/IncludeTransforms__c.field-meta.xml
<CustomField>
    <fullName>IncludeTransforms__c</fullName>
    <description>Whether to include safe metadata transforms</description>
    <defaultValue>false</defaultValue>
    <label>Include Transforms</label>
    <type>Checkbox</type>
</CustomField>