force-app/main/default/objects/ChangePlan__c/fields/IncrementPolicy__c.field-meta.xml
<CustomField>
    <fullName>IncrementPolicy__c</fullName>
    <description>Policy for API version increments</description>
    <label>Increment Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IncrementalOnly</fullName>
                <default>true</default>
                <label>Incremental Only</label>
            </value>
            <value>
                <fullName>AllowJumps</fullName>
                <label>Allow Jumps With Warnings</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>