force-app/main/default/objects/ChangePlan__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>User-defined name for this change plan</description>
    <label>Plan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>