force-app/main/default/objects/ChangePlan__c/fields/ScopeJson__c.field-meta.xml
<CustomField>
    <fullName>ScopeJson__c</fullName>
    <description>Serialized scope and filter settings</description>
    <label>Scope JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>