force-app/main/default/objects/ChangePlan__c/fields/ValidationMode__c.field-meta.xml
<CustomField>
    <fullName>ValidationMode__c</fullName>
    <description>Whether to validate only or deploy</description>
    <label>Validation Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ValidateOnly</fullName>
                <default>true</default>
                <label>Validate Only</label>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>